# ucumvert

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi-publish.yml
src/tests/: conftest.py
src/ucumvert/: __init__.py  cli.py  parser.py  pint_ucum_defs.txt  pint_ucum_defs_mapping_report.txt  ucum_grammar.lark  ucum_pint.py  xml_util.py
tests/: conftest.py  test_cli.py  test_parser.py  test_ucum.py  test_ucum_pint.py  test_xm_util.py
